WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228776
[ARM64] Fix Zoom black screen during video meeting on Safari
https://bugs.webkit.org/show_bug.cgi?id=228776
Summary
[ARM64] Fix Zoom black screen during video meeting on Safari
Yijia Huang
Reported
2021-08-04 08:08:15 PDT
This patch fixes problem:
rdar://81434487
.
Attachments
Patch
(3.52 KB, patch)
2021-08-04 09:38 PDT
,
Yijia Huang
saam
: review+
Details
Formatted Diff
Diff
Patch for landing
(3.53 KB, patch)
2021-08-04 13:26 PDT
,
Yijia Huang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2021-08-04 09:38:49 PDT
Created
attachment 434909
[details]
Patch
Saam Barati
Comment 2
2021-08-04 13:16:56 PDT
Comment on
attachment 434909
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=434909&action=review
r=me
> Source/JavaScriptCore/ChangeLog:10 > + meeting on Safari. The result of the verified autospade points to the previous patch > + (
https://bugs.webkit.org/show_bug.cgi?id=228057
). Previously, we introduce a pattern
I would just say this "bisected" to this revision, not "auto spade". Autospade is a tool specific to Apple.
Yijia Huang
Comment 3
2021-08-04 13:26:26 PDT
Created
attachment 434928
[details]
Patch for landing
EWS
Comment 4
2021-08-04 14:18:04 PDT
Committed
r280659
(
240268@main
): <
https://commits.webkit.org/240268@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434928
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-08-04 14:19:16 PDT
<
rdar://problem/81533033
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug